# ChangeLog for net-misc/dhcp
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.6 2002/07/21 21:07:39 owen Exp $

*dhcp-3.0-r2 (16 Jun 2002)

  21 Jul 2002; Owen Stampflee <owen@gentoo.org> :

  Added PPC to KEYWORDS.


  6 Jul 2002; phoen][x <phoenix@gentoo.org>: dhcp-3.0-r2.ebuild:
  Added KEYWORDS.
  
  16 Jun 2002; Brandon Low <lostlogic@gentoo.org>: dhcp-3.0-r2.ebuild:

  This moves the definition of which ethernet ports to listen on to
  /etc/conf.d where it should be this is prettier now thank TrAns13nT
  for making fix this bug.

*dhcp-3.0-r1 (6 July 2002)

  6 Jul 2002; phoen][x <phoenix@gentoo.org>: dhcp-3.0-r1.ebuild:
  Added KEYWORDS.

*dhcp-3.0 (14 Feb 2002)

  6 Jul 2002; phoen][x <phoenix@gentoo.org>: dhcp-3.0.ebuild:
  Added KEYWORDS, SLOTS.

  14 Feb 2002; Daniel Robbins <drobbins@gentoo.org>: New 3.0 release.

*dhcp-3.0_rc12-r6 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.