@@ -1,7 +1,10 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/files/conf.dhcpd,v 1.3 2002/06/23 04:23:48 nitro Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/files/conf.dhcpd,v 1.4 2002/09/03 07:40:14 lostlogic Exp $
 
 #configure which interface or interfaces to for dhcp to listen on
 #list all interfaces space separated.
 IFACE="eth0"
+
+# Insert any other options needed
+DHCPD_OPTS=""
