@@ -1,6 +1,14 @@
 # ChangeLog for net-misc/dhcp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.6 2002/07/21 21:07:39 owen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.7 2002/09/03 07:40:14 lostlogic Exp $
+
+*dhcp-3.0-r3 (16 Jun 2002)
+
+  03 Sep  2002; Brandon Low <lostlogic@gentoo.org> dhcp-3.0-r3.ebuild, files/conf.dhcp,
+						   files/dhcp.rc7, digest-dhcp-3.0-r3:
+
+  Update ebuild to touch dhcp.leases, fix config and init.d files
+  to work more sanetly.
 
 *dhcp-3.0-r2 (16 Jun 2002)
 
